--- a/botapp/static/sass/modules/_mixins.scss
+++ b/botapp/static/sass/modules/_mixins.scss
@@ -12,7 +12,7 @@
             inspect($raw-query)
         );
 
-        @media #{query} {
+        @media #{$query} {
             @content;
         }
     } @else {
