--- a/botapp/static/css/main.css
+++ b/botapp/static/css/main.css
@@ -20,6 +20,10 @@
 /**
 * Grid of the Marketing Container --> Tagline
 */
+@media (max-width: 1000px) {
+  #tagline-container {
+    display: none; } }
+
 /**
 * Grid of the main container --> Main elements of the app
 */
@@ -30,6 +34,12 @@
   height: 80%;
   max-width: 600px;
   max-height: 800px; }
+  @media (max-width: 1000px) {
+    #main-container {
+      margin-right: 0px; } }
+  @media (max-width: 600px) {
+    #main-container {
+      min-height: 100%; } }
 
 .main-element:nth-child(1) {
   flex: 1; }
@@ -42,7 +52,7 @@
   display: flex;
   flex-direction: column; }
 
-.message-element:nth-chil(3) {
+.message-element:nth-child(3) {
   flex: 1; }
 
 /**
