All CSS migration on sass DONE

--- a/botapp/static/sass/base/_base.scss
+++ b/botapp/static/sass/base/_base.scss
@@ -42,3 +42,8 @@ p {
     margin-right: 0;
     line-height: 140%;
 }
+
+.card-custom {
+    box-shadow: $card-shadow;
+    background-color: $white;
+}
