--- a/botapp/static/sass/main.scss
+++ b/botapp/static/sass/main.scss
@@ -6,6 +6,9 @@
 
 // Layout
 @import 'layout/grid';
+@import 'layout/header';
+@import 'layout/info';
+@import 'layout/chat';
 
 // Base
 @import 'base/base';
