--- a/botapp/static/css/main.css
+++ b/botapp/static/css/main.css
@@ -1,271 +1,41 @@
 /**
-* Grid of th global container --> Body
+Specific CSS for info card
 */
-#global-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%; }
+#fixed-tab-2 {
+  margin-top: 10px; }
 
-.global-element:nth-child(1) {
-  flex: 4;
-  margin-left: 50px; }
+.info-card > .mdl-card__media {
+  height: 200px;
+  background: url("../img/avatar-example.png") center no-repeat #F9AA33; }
 
-.global-element:nth-child(2) {
-  flex: 3;
-  margin-right: 50px; }
+.info-card > .mdl-card__actions > a {
+  height: 40px; }
 
-/**
-* Grid of the Marketing Container --> Tagline
-*/
-@media (max-width: 1000px) {
-  #tagline-container {
-    display: none; } }
-
-/**
-* Grid of the main container --> Main elements of the app
-*/
-#main-container {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 80%;
-  max-width: 600px;
-  max-height: 800px; }
-  @media (max-width: 1000px) {
-    #main-container {
-      margin-right: 0px; } }
-  @media (max-width: 600px) {
-    #main-container {
-      min-height: 100%; } }
-
-.main-element:nth-child(1) {
+.chat-content {
   flex: 1; }
 
-/**
-* Grid of the message-container
-* Only Child from main-container
-*/
-#message-container {
-  display: flex;
-  flex-direction: column; }
-
-.message-element:nth-child(3) {
-  flex: 1; }
-
-/**
-* Grid or message-title
-*/
-#message-title {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  height: 50px; }
-
-/**
-* Grid of message-nav
-*/
-#message-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  height: 50px; }
-
-.message-nav-element {
-  flex: auto; }
-
-/**
-* Grid of message-content
-*/
-#message-content {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden; }
-
-.content-element:nth-child(1) {
-  flex: 1; }
-
-.content-element:nth-child(2) {
-  flex: 1; }
-
-/**
-* Grid of info-container
-*/
-#info-container {
-  display: none;
-  /* None by default */
-  flex-direction: column; }
-
-.info-element:nth-child(2) {
-  flex: 1; }
-
-/**
-* Grid of avatar-profile
-*/
-#avatar-profile {
-  display: flex;
-  flex-direction: row; }
-
-.avatar-element:nth-child(1) {
-  flex: 2; }
-
-.avatar-element:nth-child(2) {
-  flex: 3; }
-
-/**
-* Grid of avatar-description
-*/
-#avatar-description {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; }
-
-/**
-* Grid of chat-container
-*/
-#chat-container {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden; }
-
-.chat-element:nth-child(1) {
-  flex: 1;
-  overflow: scroll;
-  transform: rotate(180deg); }
-
-/**
-* Grid of bubble-container
-*/
-#bubble-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  transform: rotate(180deg); }
-
-/**
-* Grid of message-status
-*/
-#message-status {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start; }
-
-.message-status-element {
-  display: none; }
-
-/**
-* Grid of message-input
-*/
-#message-input {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  height: 50px; }
-
-.message-input-element:nth-child(1) {
-  flex: 1; }
-
-/**
-* Grid of form-container
-*/
-#form-container {
-  display: flex;
-  flex-direction: row; }
-
-.form-element:nth-child(2) {
-  flex: 1; }
-
-.main-title {
-  background-color: #344955; }
-
-.title {
-  color: #FFFFFF;
-  font-size: 2.0em;
-  padding-left: 1.0em;
-  position: relative;
-  z-index: 1; }
-  .title::before {
-    content: '';
-    position: absolute;
-    top: 20px;
-    left: 10px;
-    height: 10px;
-    width: 10px;
-    border-radius: 5px;
-    background: #2E7D32;
-    z-index: 2; }
-
-.nav-message {
-  border-bottom: 1px solid #ccc;
-  box-shadow: none; }
-
-.message-nav-element {
-  border: none;
-  font-weight: bold; }
-  .message-nav-element:hover {
-    color: #F9AA33;
-    cursor: pointer; }
-
-.nav-selected {
+.chat-form {
   background-color: #FFFFFF;
-  color: #F9AA33; }
-
-.nav-unselected {
-  background-color: #CFD8DC;
-  color: #232F34; }
-
-#avatar-image {
-  padding: 20px; }
-
-#avatar-image > img {
-  max-width: 100%;
-  height: auto;
-  border: solid;
-  border-radius: 50%; }
-
-#avatar-description {
-  color: #232F34;
-  padding-left: 5px; }
-
-.avatar-description-element {
-  line-height: 10px; }
-
-#avatar-name {
-  text-align: left;
-  font-weight: bold;
-  font-size: 25px;
-  color: #F9AA33; }
-
-#avatar-job {
-  font-weight: bold;
-  font-size: 15px; }
-
-#project-description > p {
-  text-align: justify;
-  padding-left: 40px;
-  padding-right: 40px; }
-
-.card-footer {
-  border-top: solid 1px #B6B6B6;
-  padding: 5px;
-  width: 100%; }
-
-.card-footer ul {
-  padding: 0;
   width: 100%;
-  margin: auto;
-  text-align: center; }
+  height: 55px; }
 
-.card-footer ul li {
-  display: inline-block;
-  list-style: none;
-  margin: 5px; }
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
 
-.card-footer ul li i {
-  color: #F9AA33; }
+.message-writer {
+  width: 100%;
+  max-width: 800px;
+  margin-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center; }
 
 /* From Message Content : Speech Bubble Configuration */
 .talk-bubble {
@@ -372,23 +142,29 @@ html {
 */
 html,
 body {
-  background-image: linear-gradient(to right bottom, #a3bded, #95b2e3, #86a7da, #789cd0, #6991c7);
-  font-family: "Roboto", sans-serif;
-  height: 100%;
+  font-family: 'Roboto', 'Helvetica', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #F5F5F5; }
+
+section {
   width: 100%;
-  margin: 0px;
+  height: 100%;
   overflow: hidden; }
 
-p {
-  display: block;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 0;
-  margin-right: 0;
-  line-height: 140%; }
+.page-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
-.card-custom {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  background-color: #FFFFFF; }
+.mdl-card {
+  width: 100%;
+  background-color: #FFFFFF;
+  max-width: 800px; }
+  @media (min-width: 800px) {
+    .mdl-card {
+      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); } }
 
 /*# sourceMappingURL=main.css.map */
