--- a/botapp/static/sass/base/_base.scss
+++ b/botapp/static/sass/base/_base.scss
@@ -26,24 +26,32 @@
 */
 html, 
 body {
-    background-image: linear-gradient(to right bottom, #a3bded, #95b2e3, #86a7da, #789cd0, #6991c7);
-    font-family: $font-stack;
-    height: 100%;
+    font-family: 'Roboto', 'Helvetica', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: $grey;
+}
+
+section {
     width: 100%;
-    margin: 0px;
+    height: 100%;
     overflow: hidden;
 }
 
-p {
-    display: block;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    margin-left: 0;
-    margin-right: 0;
-    line-height: 140%;
+.page-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.card-custom {
-    box-shadow: $card-shadow;
+.mdl-card {
+    width: 100%;
     background-color: $white;
+    max-width: 800px;
+
+    @include respond-to('medium') {
+        @include shadow-2dp();
+    }
 }
