--- a/botapp/static/sass/layout/_chat.scss
+++ b/botapp/static/sass/layout/_chat.scss
@@ -1,5 +1,42 @@
 // All the custom css for chat container
 
+.chat-content {
+  flex: 1;
+}
+
+.chat-form {
+  background-color: $white;
+  width: 100%;
+  height: 55px;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.message-writer {
+  width: 100%;
+  max-width: 800px;
+  margin-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.mdl-textfield__input {
+
+}
+
+.submit-button {
+}
+
 /* From Message Content : Speech Bubble Configuration */
 
 .talk-bubble {
