--- a/botapp/static/sass/layout/_info.scss
+++ b/botapp/static/sass/layout/_info.scss
@@ -1,63 +1,16 @@
-// All the custom css for info container
+/**
+Specific CSS for info card
+*/
 
-#avatar-image {
-    padding: 20px;
-  }
-  
-  #avatar-image > img {
-    max-width: 100%;
-    height: auto;
-    border: solid;
-    border-radius: 50%;
-  }
-  
-  #avatar-description {
-    color: #232F34;
-  
-    padding-left: 5px;
-  }
-  
-  .avatar-description-element {
-    line-height: 10px;
-  }
-  
-  #avatar-name {
-    text-align: left;
-    font-weight: bold;
-    font-size: 25px;
-    color: #F9AA33;
-  }
-  
-  #avatar-job {
-    font-weight: bold;
-    font-size : 15px;
-  }
-  
-  #project-description > p {
-    text-align: justify;
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-  
-  .card-footer {
-    border-top: solid 1px #B6B6B6;
-    padding: 5px;
-    width: 100%;
-  }
-  
-  .card-footer ul {
-    padding: 0;
-    width: 100%;
-    margin: auto;
-    text-align: center;
-  }
-  
-  .card-footer ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 5px;
-  }
-  
-  .card-footer ul li i {
-    color: #F9AA33;
-  }
+#fixed-tab-2 {
+    margin-top: 10px;
+}
+
+.info-card > .mdl-card__media {
+    height: 200px;
+    background: url('../img/avatar-example.png') center no-repeat $yellow;
+}
+
+.info-card > .mdl-card__actions > a {
+    height: 40px;
+}
