--- a/botapp/static/sass/modules/_variables.scss
+++ b/botapp/static/sass/modules/_variables.scss
@@ -7,17 +7,22 @@ $blue: #344955;
 $blue-light: #A3BDED;
 $blue-dark: #232F34;
 $online-green: #2E7D32;
-$grey: #CFD8DC;
+$grey: #F5F5F5;
 $classic-grey: #ccc;
 $yellow: #F9AA33;
 
 // Breakpoints Screen
 $breakpoints: (
-    'small': screen and (max-width: 600px),
-    'medium': screen and (max-width: 800px),
-    'large': screen and (max-width: 1000px),
-    'huge': screen and (max-width: 1200px),
+    'small': (min-width: 600px),
+    'medium': (min-width: 800px),
+    'large': (min-width: 1000px),
+    'huge': (min-width: 1200px),
 );
+
+// For shadows -> get from material design lite scss
+$shadow-key-umbra-opacity: 0.2 !default;
+$shadow-key-penumbra-opacity: 0.14 !default;
+$shadow-ambient-shadow-opacity: 0.12 !default;
 
 
 $card-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
