--- a/botapp/templates/base.html
+++ b/botapp/templates/base.html
@@ -15,16 +15,28 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-orange.min.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
   </head>
-  <body id="global-container" class="">
-
+  <body>
+    <!-- Simple header with fixed tabs. -->
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
+                mdl-layout--fixed-tabs">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <!-- Title -->
+          <span class="mdl-layout-title">GrandPy Bot</span>
+        </div>
+        <!-- Tabs -->
+        <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+          <a href="#fixed-tab-1" class="mdl-layout__tab is-active">CHAT</a>
+          <a href="#fixed-tab-2" class="mdl-layout__tab">INFO</a>
+        </div>
+      </header>
       {% block content %}{% endblock %}
-
-
+    </div>
+    
     <!-- Optional JavaScript -->
     <!-- Materialize Javascript -->
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
