--- a/botapp/static/css/main.css
+++ b/botapp/static/css/main.css
@@ -11,9 +11,28 @@ Specific CSS for info card
 .info-card > .mdl-card__actions > a {
   height: 40px; }
 
+/* All elements concerning chat form*/
 .chat-content {
-  flex: 1; }
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: scroll;
+  transform: rotate(180deg);
+  direction: rtl; }
 
+.bubble-historic {
+  flex: 1;
+  width: 100%;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  transform: rotate(180deg);
+  direction: ltr; }
+
+/* All element concerning message form */
 .chat-form {
   background-color: #FFFFFF;
   width: 100%;
@@ -157,14 +176,19 @@ section {
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  overflow: hidden; }
 
 .mdl-card {
   width: 100%;
   background-color: #FFFFFF;
-  max-width: 800px; }
+  max-width: 800px;
+  margin-bottom: 5px; }
   @media (min-width: 800px) {
     .mdl-card {
       box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); } }
+
+.mdl-card__actions > a {
+  text-decoration: none; }
 
 /*# sourceMappingURL=main.css.map */
