--- a/botapp/static/sass/layout/_chat.scss
+++ b/botapp/static/sass/layout/_chat.scss
@@ -1,9 +1,29 @@
 // All the custom css for chat container
 
+/* All elements concerning chat form*/
+
 .chat-content {
+  width: 100%;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: scroll;
+  transform: rotate(180deg);
+  direction: rtl;
 }
 
+.bubble-historic {
+  flex: 1;
+  width: 100%;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  transform: rotate(180deg);
+  direction: ltr;
+}
+/* All element concerning message form */
 .chat-form {
   background-color: $white;
   width: 100%;
@@ -28,13 +48,6 @@ form {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-}
-
-.mdl-textfield__input {
-
-}
-
-.submit-button {
 }
 
 /* From Message Content : Speech Bubble Configuration */
