--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -5,6 +5,8 @@
   <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
     <div class="page-content">
       <div class="chat-content">
+        <div id="bubble-container" class="bubble-historic">
+        </div>
         
       </div>
       <div class="chat-form">
@@ -27,8 +29,8 @@
           <h2 class="mdl-card__title-text">GrandPy Bot</h2>
         </div>
         <div class="mdl-card__title">
-            <h5 class="mdl-card__title-text">The Dream GrandFather</h5>
-          </div>
+          <h5 class="mdl-card__title-text">The Dream GrandFather</h5>
+        </div>
         <div class="mdl-card__supporting-text">
           GrandPy Bot est une application réalisée dans le cadre de la formation
           Développeur d'Application Python proposée par Openclassrooms.</br>
