Front almost finished for 1st live version: last things to do -> review speech bubbles

--- a/botapp/static/sass/main.scss
+++ b/botapp/static/sass/main.scss
@@ -4,11 +4,12 @@
 @import 'modules/variables';
 @import 'modules/mixins';
 
+// Base
+@import 'base/base';
+
 // Layout
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/info';
 @import 'layout/chat';
-
-// Base
-@import 'base/base';
+@import 'layout/bubble';
