--- a/botapp/static/css/main.css
+++ b/botapp/static/css/main.css
@@ -1,12 +1,91 @@
 /**
+ * Set up a decent box model on the root element
+ */
+html {
+  box-sizing: border-box; }
+
+/**
+* Make all elements from the DOM inherit from the parent box-sizing
+* Since `*` has a specificity of 0, it does not override the `html` value
+* making all elements inheriting from the root box-sizing value
+* See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+*/
+*,
+*::before,
+*::after {
+  box-sizing: inherit; }
+
+/**
+* Basic style for the app
+*/
+html,
+body {
+  font-family: 'Roboto', 'Helvetica', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #F5F5F5; }
+
+section {
+  width: 100%;
+  height: 100%; }
+
+.page-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden; }
+
+.mdl-card {
+  width: 100%;
+  max-width: 800px;
+  margin-bottom: 5px; }
+  @media (min-width: 800px) {
+    .mdl-card {
+      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); } }
+
+.mdl-card__actions > a {
+  text-decoration: none; }
+
+/**
+* All custom CSS for header
+*/
+.mdl-layout-title::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -15px;
+  height: 10px;
+  width: 10px;
+  border-radius: 5px;
+  background: #2E7D32; }
+@media (min-width: 800px) {
+  .mdl-layout-title::after {
+    content: "A la recherche d'un endroit?";
+    position: fixed;
+    right: 10px; } }
+
+/**
 Specific CSS for info card
 */
-#fixed-tab-2 {
-  margin-top: 10px; }
+.info-container {
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: scroll; }
 
 .info-card > .mdl-card__media {
   height: 200px;
   background: url("../img/avatar-example.png") center no-repeat #F9AA33; }
+
+.info-card > .mdl-card__actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
 
 .info-card > .mdl-card__actions > a {
   height: 40px; }
@@ -108,87 +187,25 @@ form {
 #message-status {
   background-color: #CFD8DC; }
 
-/* From Chat Content Configuration: Form configuration */
-#message-input {
-  background-color: #FFFFFF;
-  padding-left: 5px;
-  border-top: 2px solid #CFD8DC; }
-
-.form-element:nth-child(2) {
-  border: none; }
-
-.form-element:nth-child(3) {
-  border: none;
-  color: #F9AA33;
-  font-weight: bold;
-  background: none; }
-
-#submit-button {
-  text-align: center;
-  vertical-align: middle; }
-
-#submit-button:hover {
-  cursor: pointer; }
-
 /* Footer Configuration */
 .loader-position {
   margin: 30px; }
 
-.z-depth-0 {
-  -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0, 0);
-  -moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0, 0);
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0, 0); }
-
 /**
- * Set up a decent box model on the root element
- */
-html {
-  box-sizing: border-box; }
-
-/**
-* Make all elements from the DOM inherit from the parent box-sizing
-* Since `*` has a specificity of 0, it does not override the `html` value
-* making all elements inheriting from the root box-sizing value
-* See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+* All custom CSS for bubbles
 */
-*,
-*::before,
-*::after {
-  box-sizing: inherit; }
+.bubble-card {
+  height: auto; }
 
-/**
-* Basic style for the app
-*/
-html,
-body {
-  font-family: 'Roboto', 'Helvetica', sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #F5F5F5; }
+.bubble-card__bot {
+  background-color: #A3BDED;
+  margin-left: 30px; }
 
-section {
-  width: 100%;
-  height: 100%;
-  overflow: hidden; }
+.bubble-card__user {
+  background-color: #F5F5F5;
+  margin-left: 60px; }
 
-.page-content {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: hidden; }
-
-.mdl-card {
-  width: 100%;
-  background-color: #FFFFFF;
-  max-width: 800px;
-  margin-bottom: 5px; }
-  @media (min-width: 800px) {
-    .mdl-card {
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); } }
-
-.mdl-card__actions > a {
-  text-decoration: none; }
+.bubble-card > .mdl-card__actions > a {
+  padding-left: 50px; }
 
 /*# sourceMappingURL=main.css.map */
