--- a/botapp/static/sass/layout/_bubble.scss
+++ b/botapp/static/sass/layout/_bubble.scss
@@ -2,7 +2,20 @@
 * All custom CSS for bubbles
 */
 
+.bubble-card {
+    height: auto;
+}
+
+.bubble-card__bot {
+    background-color: $blue-light;
+    margin-left: 30px;
+}
+
+.bubble-card__user {
+    background-color: $grey;
+    margin-left: 60px;
+}
+
 .bubble-card > .mdl-card__actions > a {
-    padding-left : 100px;
-    color: dark;
+    padding-left :50px;
 }
