--- a/botapp/static/sass/layout/_info.scss
+++ b/botapp/static/sass/layout/_info.scss
@@ -2,13 +2,25 @@
 Specific CSS for info card
 */
 
-#fixed-tab-2 {
-    margin-top: 10px;
+.info-container {
+    width: 100%;
+    flex:1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: scroll;
 }
 
 .info-card > .mdl-card__media {
     height: 200px;
     background: url('../img/avatar-example.png') center no-repeat $yellow;
+}
+
+.info-card > .mdl-card__actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .info-card > .mdl-card__actions > a {
