--- a/botapp/static/sass/layout/_chat.scss
+++ b/botapp/static/sass/layout/_chat.scss
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: center;
   transform: rotate(180deg);
   direction: ltr;
 }
@@ -48,70 +49,4 @@ form {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-}
-
-/* From Message Content : Speech Bubble Configuration */
-
-.talk-bubble {
-    margin: 30px;
-    display: inline-block;
-    position: relative;
-  	width: auto;
-  	height: auto;
-  	background-color: #CFD8DC;
-  }
-
-  .round {
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-  }
-
-  .tri-right.right-in:after{
-  	content: ' ';
-  	position: absolute;
-  	width: 0;
-  	height: 0;
-    left: auto;
-  	right: -20px;
-    top: 38px;
-  	bottom: auto;
-  	border: 12px solid;
-  	border-color: #CFD8DC transparent transparent #CFD8DC;
-  }
-
-  .tri-right.left-in:after{
-	content: ' ';
-	position: absolute;
-	width: 0;
-	height: 0;
-  left: -20px;
-	right: auto;
-  top: 38px;
-	bottom: auto;
-	border: 12px solid;
-	border-color: #A3BDED #A3BDED transparent transparent;
-}
-
-  .talktext {
-    padding: 1em;
-    text-align: left;
-    line-height: 1em;
-  }
-  .talktext p{
-  /* remove webkit p margins */
-    -webkit-margin-before: 0em;
-    -webkit-margin-after: 0em;
-  }
-
-/* From Chat Content Configuration: Status configuration */
-
-#message-status {
-background-color: #CFD8DC;
-}
-
-/* Footer Configuration */
-
-.loader-position {
-  margin: 30px;
 }
