--- a/botapp/static/sass/modules/_variables.scss
+++ b/botapp/static/sass/modules/_variables.scss
@@ -1,14 +1,11 @@
 // Font
-$font-stack: 'Roboto', sans-serif;
+$font-stack: 'Roboto','Helvetica' , sans-serif;
 
 // All the colors from the website
 $white: #FFFFFF;
-$blue: #344955;
 $blue-light: #A3BDED;
-$blue-dark: #232F34;
 $online-green: #2E7D32;
 $grey: #F5F5F5;
-$classic-grey: #ccc;
 $yellow: #F9AA33;
 
 // Breakpoints Screen
