--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -34,8 +34,8 @@
           </div>
           <div class="mdl-card__supporting-text">
             GrandPy Bot est une application réalisée dans le cadre de la formation
-            Développeur d'Application Python proposée par Openclassrooms.</br>
-            Réalisé par Julien Nuellas
+            <strong>Développeur d'Application Python</strong> proposée par Openclassrooms.</br></br>
+            Réalisé par <strong>Julien Nuellas</strong>.
           </div>
           <div class="mdl-card__actions mdl-card--border">
               <a href="https://github.com/JN-Lab/OC-Pr7-GrandPyBot" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" target="_blank"><i class="fab fa-github fa-3x" align="middle"></i></a>
