--- a/botapp/static/sass/base/_base.scss
+++ b/botapp/static/sass/base/_base.scss
@@ -26,7 +26,7 @@
 */
 html, 
 body {
-    font-family: 'Roboto', 'Helvetica', sans-serif;
+    font-family: $font-stack;
     margin: 0;
     padding: 0;
     background-color: $grey;
@@ -44,18 +44,4 @@ section {
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-}
-
-.mdl-card {
-    width: 100%;
-    max-width: 800px;
-    margin-bottom: 5px;
-
-    @include respond-to('medium') {
-        @include shadow-2dp();
-    }
-}
-
-.mdl-card__actions > a {
-    text-decoration: none;
 }
