--- a/botapp/static/sass/layout/_bubble.scss
+++ b/botapp/static/sass/layout/_bubble.scss
@@ -2,20 +2,43 @@
 * All custom CSS for bubbles
 */
 
-.bubble-card {
-    height: auto;
+// Global
+.mdl-card {
+    width: 100%;
+    max-width: 800px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    @include respond-to('medium') {
+        @include shadow-2dp();
+    }
 }
 
-.bubble-card__bot {
+// For bubbles with actions
+.mdl-card__actions > a {
+    text-decoration: none;
+}
+
+// For talk bubble
+.mdl-card.mdl-card__bubble {
+    min-height: 0px;
+    width: 90%;
+    max-width: 600px;
+}
+  
+.mdl-card.talk-left {
+    border-radius: 0 20px 0 20px;
     background-color: $blue-light;
-    margin-left: 30px;
+    margin-left: 0px;
+}
+  
+.mdl-card.talk-right {
+    border-radius: 20px 0px 20px 0px;
+    background-color: $white;
+    margin-left: 0px;
 }
 
-.bubble-card__user {
-    background-color: $grey;
-    margin-left: 60px;
-}
-
-.bubble-card > .mdl-card__actions > a {
-    padding-left :50px;
+// for loader bubble
+.mdl-spinner.mdl-spinner__loader {
+    margin: 10px;
 }
