--- a/botapp/static/sass/base/_base.scss
+++ b/botapp/static/sass/base/_base.scss
@@ -1,6 +1,7 @@
-// -----------------------------------------------------------------------------
-// This file contains very basic styles.
-// -----------------------------------------------------------------------------
+/**
+* All the basic custom CSS
+*/
+
 
 /**
  * Set up a decent box model on the root element
@@ -33,6 +34,7 @@ body {
 }
 
 section {
+    position: absolute;
     width: 100%;
     height: 100%;
 }
