--- a/botapp/static/sass/layout/_bubble.scss
+++ b/botapp/static/sass/layout/_bubble.scss
@@ -21,7 +21,8 @@
 
 // For talk bubble
 .mdl-card.mdl-card__bubble {
-    min-height: 0px;
+    min-height: auto;
+    height: auto;
     width: 90%;
     max-width: 600px;
 }
