--- a/botapp/static/sass/modules/_mixins.scss
+++ b/botapp/static/sass/modules/_mixins.scss
@@ -1,7 +1,6 @@
-/// Responsive breakpoint manager
-/// @access public
-/// @param {String} &breakpoint - Breakpoint
-/// @requires &breakpoints
+/**
+* All the mixins
+*/
 @mixin respond-to($breakpoint) {
     $raw-query: map-get($breakpoints, $breakpoint);
 
