--- a/botapp/templates/base.html
+++ b/botapp/templates/base.html
@@ -10,7 +10,7 @@
     <title>GrandPy Bot - Le Gand-père incollable sur les lieux</title>
 
     <!-- Materialize CSS -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-orange.min.css" />
     <!-- Custom CSS -->
