--- a/botapp/static/sass/layout/_header.scss
+++ b/botapp/static/sass/layout/_header.scss
@@ -1,22 +1,13 @@
-/**
-* All custom CSS for header
-*/
-
-.mdl-layout-title{
-
-    &::before {
-        content:"";
-        position: absolute;
-        top: 5px;
-        left: -15px;
-        @include circle(10px, $online-green);
-    }
-
-    @include respond-to("medium") {
-        &::after {
-            content: "A la recherche d'un endroit?";
-            position: fixed;
-            right: 10px;
-        }
-    }
-}
+// Header CSS set-up
+header {
+    height: 75px;
+    width: 100%;
+    background-color: $green-dark;
+    
+    @include flex-box(row, center, center);
+    @include shadow-2dp();
+  }
+  
+  header.header-title{
+    height: 100%
+  }
