--- a/botapp/static/css/main.css
+++ b/botapp/static/css/main.css
@@ -1,59 +1,81 @@
 /**
- * Set up a decent box model on the root element
- */
-html {
+* VARIABLES
+*/
+/**
+* MIXINS
+*/
+* {
   box-sizing: border-box; }
 
-/**
-* Make all elements from the DOM inherit from the parent box-sizing
-* Since `*` has a specificity of 0, it does not override the `html` value
-* making all elements inheriting from the root box-sizing value
-* See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
-*/
-*,
-*::before,
-*::after {
-  box-sizing: inherit; }
-
-/**
-* Basic style for the app
-*/
 html,
 body {
-  font-family: "Roboto", "Helvetica", sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #F5F5F5; }
+  margin: 0px;
+  height: 100%;
+  font-family: "Roboto", "Helevetica", sans-serif;
+  font-size: 100%; }
 
-section {
-  width: 100%;
-  height: 100%; }
+h1 {
+  color: #FFFFFF; }
 
 .page-content {
+  box-sizing: border-box;
+  background-color: #F5F5F5;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  overflow: hidden; }
+  justify-content: flex-start;
+  align-items: center; }
 
-/**
-* All custom CSS for header
-*/
-.mdl-layout-title::before {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: -15px;
-  height: 10px;
-  width: 10px;
-  border-radius: 5px;
-  background: #2E7D32; }
-@media (min-width: 800px) {
-  .mdl-layout-title::after {
-    content: "A la recherche d'un endroit?";
-    position: fixed;
-    right: 10px; } }
+footer {
+  width: 100%;
+  border-top: 1px solid #045D56;
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+form {
+  height: 100%;
+  width: 100%;
+  max-width: 800px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center; }
+
+form .message-writer {
+  flex: 1;
+  font-size: 1.5em;
+  border: none;
+  padding: 3px; }
+
+.btn-simple {
+  height: 100%;
+  background: none;
+  border: none; }
+
+.btn-simple__content {
+  background: none;
+  border: none;
+  font-size: 2em;
+  font-weight: bold;
+  font-variant: small-caps;
+  color: #045D56; }
+
+header {
+  height: 75px;
+  width: 100%;
+  background-color: #045D56;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
+
+header.header-title {
+  height: 100%; }
 
 /**
 Specific CSS for info card
@@ -69,7 +91,7 @@ Specific CSS for info card
 
 .info-card > .mdl-card__media {
   height: 200px;
-  background: url("../img/avatar-example.png") center no-repeat #F9AA33; }
+  background: url("../img/avatar-example.png") center no-repeat #FFCF44; }
 
 .info-card > .mdl-card__actions {
   display: flex;
@@ -79,83 +101,51 @@ Specific CSS for info card
 .info-card > .mdl-card__actions > a {
   height: 40px; }
 
-/* All elements concerning chat form*/
-.chat-content {
+main {
   width: 100%;
   flex: 1;
+  overflow: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  overflow: scroll;
-  transform: rotate(180deg);
-  direction: rtl; }
-
-.bubble-historic {
-  flex: 1;
-  width: 100%;
-  max-width: 800px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  transform: rotate(180deg);
-  direction: ltr; }
-
-/* All element concerning message form */
-.chat-form {
-  background-color: #FFFFFF;
-  width: 100%;
-  height: 55px; }
-
-form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; }
-
-.message-writer {
-  width: 100%;
-  max-width: 800px;
-  margin-top: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
-  display: flex;
-  flex-direction: row;
   justify-content: flex-start;
   align-items: center; }
 
-/**
-* All custom CSS for bubbles
-*/
-.mdl-card {
+section {
+  height: 100%;
   width: 100%;
   max-width: 800px;
+  flex: 1;
+  overflow: auto;
+  transform: rotate(180deg);
+  direction: rtl;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center; }
+
+.message-alignment {
+  transform: rotate(180deg);
+  direction: ltr; }
+
+.card-bubble {
+  width: 100%;
+  max-width: 600px;
+  background-color: white;
   margin-top: 10px;
-  margin-bottom: 10px; }
-  @media (min-width: 800px) {
-    .mdl-card {
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); } }
+  margin-bottom: 10px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
 
-.mdl-card__actions > a {
-  text-decoration: none; }
+.card-bubble.talk-left__simple {
+  border-radius: 0 20px 20px 20px;
+  background-color: #1EB980; }
 
-.mdl-card.mdl-card__bubble {
-  min-height: 0px;
-  width: 90%;
-  max-width: 600px; }
+.card-bubble.talk-right__simple {
+  border-radius: 20px 0px 20px 20px; }
 
-.mdl-card.talk-left {
-  border-radius: 0 20px 0 20px;
-  background-color: #A3BDED;
-  margin-left: 0px; }
-
-.mdl-card.talk-right {
-  border-radius: 20px 0px 20px 0px;
-  background-color: #FFFFFF;
-  margin-left: 0px; }
-
-.mdl-spinner.mdl-spinner__loader {
-  margin: 10px; }
+.card-bubble__text {
+  color: rgba(0, 0, 0, 0.54);
+  font-size: 14px;
+  line-height: 18px;
+  padding: 16px 16px; }
 
 /*# sourceMappingURL=main.css.map */
