--- a/botapp/static/sass/layout/_chat.scss
+++ b/botapp/static/sass/layout/_chat.scss
@@ -1,52 +1,26 @@
-// All the custom css for chat container
-
-/* All elements concerning chat form*/
-
-.chat-content {
+// Chat Container CSS set-up
+main {
   width: 100%;
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: scroll;
+  overflow: auto;
+  
+  @include flex-box(column, flex-start, center);
+}
+
+section {
+  height: 100%;
+  width: 100%;
+  max-width: $chatbox-max-width;
+  //background-color: white;
+  flex: 1;
+  overflow: auto;
   transform: rotate(180deg);
   direction: rtl;
+  
+  @include flex-box(column, flex-start, center);
 }
 
-.bubble-historic {
-  flex: 1;
-  width: 100%;
-  max-width: 800px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
+.message-alignment {
   transform: rotate(180deg);
   direction: ltr;
-}
-/* All element concerning message form */
-.chat-form {
-  background-color: $white;
-  width: 100%;
-  height: 55px;
-}
-
-form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.message-writer {
-  width: 100%;
-  max-width: 800px;
-  margin-top: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
 }
