--- a/botapp/static/sass/modules/_variables.scss
+++ b/botapp/static/sass/modules/_variables.scss
@@ -1,12 +1,36 @@
-// Font
-$font-stack: 'Roboto','Helvetica' , sans-serif;
+/**
+* VARIABLES
+*/
 
-// All the colors from the website
-$white: #FFFFFF;
+// Fonts
+$font-stack: 'Roboto', 'Helevetica', sans-serif;
+  
+// Colors
+$orange: #FF6859;
+$yellow: #FFCF44;
+$green-light: #1EB980;
+$green-dark: #045D56;
 $blue-light: #A3BDED;
-$online-green: #2E7D32;
+$blue-dark: #01579B;
+$white: #FFFFFF;
 $grey: #F5F5F5;
-$yellow: #F9AA33;
+$grey-dark: #757575;
+
+// For Shadows
+$shadow-key-umbra-opacity: 0.2 !default;
+$shadow-key-penumbra-opacity: 0.14 !default;
+$shadow-ambient-shadow-opacity: 0.12 !default;
+
+// Size
+$chatbox-max-width: 800px;
+
+// For talk bubbles
+$talk-bubble: rgba(255,255,255, 1);
+$card-text-color: rgba(black, 0.54);
+$card-text__font-size: 14px !default;
+$card-text__line-height: 18px !default;
+$card-text__horizontal-padding: 16px !default;
+$card-text__vertical-padding: 16px !default;
 
 // Breakpoints Screen
 $breakpoints: (
@@ -15,11 +39,3 @@ $breakpoints: (
     'large': (min-width: 1000px),
     'huge': (min-width: 1200px),
 );
-
-// For shadows -> get from material design lite scss
-$shadow-key-umbra-opacity: 0.2 !default;
-$shadow-key-penumbra-opacity: 0.14 !default;
-$shadow-ambient-shadow-opacity: 0.12 !default;
-
-
-$card-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
