--- a/botapp/templates/base.html
+++ b/botapp/templates/base.html
@@ -10,9 +10,7 @@
     <title>GrandPy Bot - Le Gand-père incollable sur les lieux</title>
 
     <!-- Materialize CSS -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-orange.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <!-- FontAwesome -->
@@ -21,25 +19,17 @@
   </head>
   <body>
     <!-- Simple header with fixed tabs. -->
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
-                mdl-layout--fixed-tabs">
-      <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-          <!-- Title -->
-          <span class="mdl-layout-title">GrandPy Bot</span>
-        </div>
-        <!-- Tabs -->
-        <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-          <a href="#fixed-tab-1" class="mdl-layout__tab is-active">CHAT</a>
-          <a href="#fixed-tab-2" class="mdl-layout__tab">INFO</a>
+    <div class="page-content">
+      <header>
+        <div class="header-title">
+          <h1>GrandPy Bot</h1>
         </div>
       </header>
       {% block content %}{% endblock %}
     </div>
     
     <!-- Optional JavaScript -->
-    <!-- Materialize Javascript -->
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
     <!-- Custom Javascript -->
     <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
     <!-- GoogleMap API -->
