--- a/botapp/static/sass/main.scss
+++ b/botapp/static/sass/main.scss
@@ -8,8 +8,9 @@
 @import 'base/base';
 
 // Layout
-@import 'layout/grid';
 @import 'layout/header';
+@import 'layout/footer';
 @import 'layout/info';
 @import 'layout/chat';
 @import 'layout/bubble';
+@import 'layout/card';
