--- a/botapp/static/css/main.css
+++ b/botapp/static/css/main.css
@@ -27,6 +27,19 @@ h1 {
   justify-content: flex-start;
   align-items: center; }
 
+header {
+  height: 75px;
+  width: 100%;
+  background-color: #045D56;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
+
+header.header-title {
+  height: 100%; }
+
 footer {
   width: 100%;
   border-top: 1px solid #045D56;
@@ -64,19 +77,6 @@ form .message-writer {
   font-variant: small-caps;
   color: #045D56; }
 
-header {
-  height: 75px;
-  width: 100%;
-  background-color: #045D56;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
-
-header.header-title {
-  height: 100%; }
-
 /**
 Specific CSS for info card
 */
@@ -107,7 +107,7 @@ main {
   overflow: auto;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center; }
 
 section {
@@ -128,9 +128,8 @@ section {
   direction: ltr; }
 
 .card-bubble {
-  width: 100%;
+  width: 90%;
   max-width: 600px;
-  background-color: white;
   margin-top: 10px;
   margin-bottom: 10px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
@@ -140,12 +139,61 @@ section {
   background-color: #1EB980; }
 
 .card-bubble.talk-right__simple {
-  border-radius: 20px 0px 20px 20px; }
+  border-radius: 20px 0px 20px 20px;
+  background-color: #FFFFFF; }
 
 .card-bubble__text {
   color: rgba(0, 0, 0, 0.54);
   font-size: 14px;
   line-height: 18px;
   padding: 16px 16px; }
+
+.card {
+  width: 100%;
+  max-width: 800px;
+  min-width: 300px;
+  background-color: #FFFFFF;
+  border-radius: 5px; }
+  @media (min-width: 800px) {
+    .card {
+      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); } }
+
+.card-title {
+  padding-top: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: #1EB980; }
+
+.card-text {
+  padding-left: 15px;
+  padding-right: 15px;
+  color: rgba(0, 0, 0, 0.54); }
+
+.card-actions {
+  padding: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center; }
+
+.card-actions__link {
+  text-decoration: none;
+  font-size: 1em;
+  font-style: normal;
+  font-variant: small-caps;
+  margin-right: 10px;
+  color: #F4511E; }
+
+.card-media {
+  width: 100%;
+  min-height: 200px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end; }
+
+.card-border-top {
+  border-top: 1px solid rgba(0, 0, 0, 0.54); }
 
 /*# sourceMappingURL=main.css.map */
