--- a/botapp/static/sass/layout/_chat.scss
+++ b/botapp/static/sass/layout/_chat.scss
@@ -4,7 +4,7 @@ main {
   flex: 1;
   overflow: auto;
   
-  @include flex-box(column, flex-start, center);
+  @include flex-box(column, center, center);
 }
 
 section {
