--- a/botapp/static/sass/layout/_card.scss
+++ b/botapp/static/sass/layout/_card.scss
@@ -5,6 +5,8 @@
     min-width: $card-min-width;
     background-color: $white;
     border-radius: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     
     @include respond-to("medium")
     {
