--- a/botapp/static/sass/layout/_header.scss
+++ b/botapp/static/sass/layout/_header.scss
@@ -1,13 +1,51 @@
 // Header CSS set-up
 header {
-    height: 75px;
     width: 100%;
     background-color: $green-dark;
     
-    @include flex-box(row, center, center);
+    @include flex-box(column, center, center);
     @include shadow-2dp();
   }
   
   header.header-title{
     height: 100%
+  }
+
+  nav {
+    width: 100%;
+    
+    & .nav-menu {
+      background-color: $grey-dark;
+      height: 100%;
+      width: 100%;
+      list-style-type: none;
+      margin: 0px;
+    
+      @include flex-box(row, flex-start, center);
+    }
+  }
+  
+  .nav-item {
+    padding: 10px;
+    margin-right: 10px;
+    
+    & > a {
+      text-decoration: none;
+      font-size: 1em;
+      font-style: normal;
+      font-variant: small-caps;
+      color: $white;
+    }
+    
+    & > a:hover {
+      color: $green-dark;
+    }
+  }
+  
+  .nav-link.is-active {
+    color: $green-dark;
+  }
+
+  .nav-element.inactive {
+    display: none;
   }
