--- a/botapp/templates/base.html
+++ b/botapp/templates/base.html
@@ -24,6 +24,16 @@
         <div class="header-title">
           <h1>GrandPy Bot</h1>
         </div>
+        <nav>
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="#chat" class="nav-link is-active">chat</a>
+            </li>
+            <li class="nav-item">
+              <a href="#info" class="nav-link">info</a>
+            </li>  
+          </ul>
+        </nav>
       </header>
       {% block content %}{% endblock %}
     </div>
