--- a/botapp/static/css/main.css
+++ b/botapp/static/css/main.css
@@ -12,7 +12,8 @@ body {
   margin: 0px;
   height: 100%;
   font-family: "Roboto", "Helevetica", sans-serif;
-  font-size: 100%; }
+  font-size: 100%;
+  background-color: #F5F5F5; }
 
 h1 {
   color: #FFFFFF; }
@@ -27,12 +28,28 @@ h1 {
   justify-content: flex-start;
   align-items: center; }
 
+main {
+  width: 100%;
+  flex: 1;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+section {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
 header {
-  height: 75px;
   width: 100%;
   background-color: #045D56;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
@@ -40,7 +57,38 @@ header {
 header.header-title {
   height: 100%; }
 
-footer {
+nav {
+  width: 100%; }
+  nav .nav-menu {
+    background-color: #757575;
+    height: 100%;
+    width: 100%;
+    list-style-type: none;
+    margin: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center; }
+
+.nav-item {
+  padding: 10px;
+  margin-right: 10px; }
+  .nav-item > a {
+    text-decoration: none;
+    font-size: 1em;
+    font-style: normal;
+    font-variant: small-caps;
+    color: #FFFFFF; }
+  .nav-item > a:hover {
+    color: #045D56; }
+
+.nav-link.is-active {
+  color: #045D56; }
+
+.nav-element.inactive {
+  display: none; }
+
+.footer-chat {
   width: 100%;
   border-top: 1px solid #045D56;
   padding-top: 5px;
@@ -109,7 +157,7 @@ Specific CSS for info card
 .info-card > .mdl-card__actions > a {
   height: 40px; }
 
-main {
+.main-chat {
   width: 100%;
   flex: 1;
   overflow: auto;
@@ -118,7 +166,7 @@ main {
   justify-content: center;
   align-items: center; }
 
-section {
+.section-chat {
   height: 100%;
   width: 100%;
   max-width: 800px;
