--- a/botapp/static/sass/base/_base.scss
+++ b/botapp/static/sass/base/_base.scss
@@ -13,6 +13,7 @@
     height: 100%;
     font-family: $font-stack;
     font-size: 100%;
+    background-color: $grey;
   }
   
   h1 {
@@ -26,4 +27,19 @@
     height: 100%;
     
     @include flex-box(column, flex-start, center);
+  }
+
+  main {
+    width:100%;
+    flex: 1;
+    overflow: auto;
+    
+    @include flex-box(column, center, center);
+  }
+
+  section {
+    width: 100%;
+    height: 100%;
+
+    @include flex-box(column, center, center);
   }
