--- a/botapp/static/sass/layout/_footer.scss
+++ b/botapp/static/sass/layout/_footer.scss
@@ -1,10 +1,10 @@
 // Footer CSS set-up
-footer {
+.footer-chat {
     width: 100%;
     border-top: 1px solid $green-dark;
     padding-top: 5px;
     padding-bottom: 5px;
-    background-color: $white;
+    background-color:$white;
     
     @include flex-box(column, center, center);
   }
