--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -21,7 +21,23 @@
     </div>
   </section>
   <section id="info" class="nav-element">
-    INFO
+    <div class="card">
+      <div class="card-media">
+        <img src="{{ url_for('static', filename='img/oc_logo.png') }}" alt="openclassrooms-logo">
+      </div>
+      <div class="card-title">
+        <h2>GrandPy Bot</h2>
+      </div>
+      <div class="card-text">
+        <p>GrandPy Bot est une application réalisée dans le cadre de la formation Développeur d'Application Python proposée par Openclassrooms. <br>
+          Réalisé par <strong>Julien Nuellas</strong>.</p>
+      </div>
+      <div class="card-actions__social card-border-top">
+        <a class="card-actions__link" href="https://github.com/JN-Lab/OC-Pr7-GrandPyBot" target="_blank"><i class="fab fa-github fa-3x" align="middle"></i></a>
+        <a class="card-actions__link" href="https://www.linkedin.com/in/julien-nuellas/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+      </div>
+
+    </div>
   </section>
 </main>
 
